feat: establish communication between user-man and user
