# lab2/user-man-service/src/main/java/com/poziomk3/user_man_service/infrastructure/persistance/entity/UserEntity.java
@@ -1,0 +1,32 @@
+package com.poziomk3.user_man_service.infrastructure.persistance.entity;
+
+
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+
+@Entity
+@Table(name = "users")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class UserEntity {
+
+    @Id
+    private UUID userId;
+
+    @Column(nullable = false, unique = true)
+    private String email;
+
+    @Column(nullable = false)
+    private String password;
+
+    private String firstName;
+    private String lastName;
+
+    private OffsetDateTime createdAt;
+}
